syntax = "proto3";
package user;


// The Customer service definition.
service User {
    // Get all Customers with filter - A server-to-client streaming RPC.
    rpc GetUsers(UserFilter) returns (stream UserRequest) {}
    // Create a new Customer - A simple RPC
    rpc CreateUser(UserRequest) returns (UserResponse) {}
}

// Request message for creating a new customer
message UserRequest {
    int32 id = 1;  // Unique ID number for a Customer.
    string name = 2;
    string email = 3;
    string password= 4;
}

message UserResponse {
    int32 id = 1;
    bool success = 2;
}

message UserFilter {
    string keyword = 1;
}